# Projeto-LinRecom

./: .gitattributes  .gitignore  01_🎬LinRecom.py  Dockerfile.api  Dockerfile.streamlit  README.md  app.py  apprunner.yaml  pyproject.toml  requirements.txt  🎬LinRecom.py
.ipynb_checkpoints/: README-checkpoint.md
data/: co_recommendations.parquet  movies.parquet  top3_by_user.parquet  user_similarity_top3.parquet
notebooks kaggle/: linrecom-linear-recommendation.ipynb  linrecom-similarities.ipynb
