[project]
name = "LinRecom"
version = "0.1.0"
description = "Instalações com pyproject.toml"
authors = [{ name="Ronivan", email="ronizorzan@gmail.com" }]

dependencies = [
    "Flask==3.1.2",
    "ipython==8.30.0",
    "matplotlib==3.10.7",
    "numpy==1.26.4",
    "pandas==2.3.3",
    "requests==2.32.5",
    "scikit-surprise==1.1.4",
    "scipy==1.15.3",
    "seaborn==0.13.2",
    "streamlit==1.50.0",
    "scikit-learn==1.7.2"
]

[build-system]
requires = ["setuptools", "wheel", "numpy", "Cython"]
build-backend = "setuptools.build_meta"
